--- a/static/main.css
+++ b/static/main.css
@@ -24,3 +24,8 @@
     border: 2px solid white; }
     .jumbotron .lang-logo img {
       max-width: 100%; }
+
+.scrollable {
+  overflow-y: scroll;
+  height: 50vh;
+}
