--- a/templates/index.tmpl.html
+++ b/templates/index.tmpl.html
@@ -19,7 +19,7 @@
   <div class="container">
       <ul class="list-group">
           <li class="list-group-item"><a href="/users">Github users</a></li>
-          <li class="list-group-item"><a href="https://github.com/login/oauth/authorize?redirect_uri={{ .host }}/callback&client_id={{ .clientId }}&scope=user">Me</a></li>
+          <li class="list-group-item"><a href="https://github.com/login/oauth/authorize?client_id={{ .clientId }}&scope=user">Me</a></li>
       </ul>
   </div>
 </body>
